contrast isues fixed

--- a/styles/soft.css
+++ b/styles/soft.css
@@ -1,7 +1,7 @@
 /* Estilos Generales */
 :root {
-    --primary: #4361ee; /* Azul vibrante */
-    --secondary: #3f37c9; /* Azul oscuro */
+    --primary: #2043e0; /* Azul vibrante */
+    --secondary: #03dac6; /* Azul oscuro */
     --accent: #f72585; /* Rosa neón */
     --light: #f8f9fa;
     --dark: #212529;
@@ -151,7 +151,9 @@
     font-size: 3.5rem;
     margin-bottom: 20px;
   }
-  
+  .hero span {
+    color: rgb(255, 185, 55);
+  }
   .hero p {
     font-size: 1.2rem;
     max-width: 700px;
